# meteor

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
.github/workflows/: build.yml  main.yml  rust.yml
client/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  pubspec.yaml  tsconfig.json
client/lib/: main.dart  room.dart
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/components/: Header.css  Header.tsx
client/src/hooks/: useRoomParam.ts  useWebSocketRoom.ts
client/src/pages/: Home.css  Home.tsx  Room.tsx
native-client/: Cargo.toml
native-client/src/: main.rs
server/: .gitignore  Cargo.toml
server/src/: handlers.rs  main.rs  state.rs
stream/: index.html  script.js  style.css
web-client/: Cargo.toml
