[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "multipart", "ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.4", features = ["fs"] }
